fix z-index level

--- a/Client/Editor/Editor.less
+++ b/Client/Editor/Editor.less
@@ -5,7 +5,7 @@
     position: absolute;
     width: 100%;
     height: auto;
-    z-index: 2;
+    z-index: 3;
     &-button {
       border: 1px solid rgba(89, 89, 89, 0.98);
       background-color: #2A2A2A;
